[tool.poetry]
name = "ansible-deployment"
version = "0.8.0"
description = "Manage ansible deployments"
authors = ["Michael Wilson <mw@1wilson.org>"]

[tool.poetry.dependencies]
python = ">=3.9"
Jinja2 = ">=3.0.3"
PyYAML = ">=6.0"
click = ">=8.0.3"
GitPython = ">=3.1.26"
cryptography = ">=36.0.1"
hvac = ">=0.11.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ansible-deployment = "ansible_deployment.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
