[tool.poetry]
name = "ansible-deployment"
version = "1.0.1"
description = "Manage ansible deployments"
authors = ["torarg <mw@1wilson.org>"]
homepage = "https://torarg.github.io/ansible-deployment/index.html"
documentation = "https://torarg.github.io/ansible-deployment/index.html"
repository = "https://github.com/torarg/ansible-deployment"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
Jinja2 = ">=3.0.3"
PyYAML = ">=6.0"
click = ">=8.0.3"
GitPython = ">=3.1.26"
cryptography = ">=36.0.1"
hvac = ">=0.11.2"
pygments = "^2.13.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ansible-deployment = "ansible_deployment.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
